--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ html.no-js
     link(rel='stylesheet', href='css/normalize.min.css')
     link(rel='stylesheet', href='css/main.css')
     script(src='js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
-    script(data-main='scripts/main', src='scripts/require.js')
+    //- script(data-main='scripts/main', src='scripts/require.js')
   body
     //if lt IE 7
       p.chromeframe
@@ -46,22 +46,23 @@ html.no-js
         // ractive output container
         #container
         article
-          header
-            h1 article header h1
-            p
-              | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period;
-          section
-            h2 article section h2
-            p
-              | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period; Etiam ullamcorper lorem dapibus velit suscipit ultrices&period; Proin in est sed erat facilisis pharetra&period;
-          section
-            h2 article section h2
-            p
-              | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period; Etiam ullamcorper lorem dapibus velit suscipit ultrices&period; Proin in est sed erat facilisis pharetra&period;
-          footer
-            h3 article footer h3
-            p
-              | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period;
+          block content
+          //- header
+          //-   h1 article header h1
+          //-   p
+          //-     | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period;
+          //- section
+          //-   h2 article section h2
+          //-   p
+          //-     | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period; Etiam ullamcorper lorem dapibus velit suscipit ultrices&period; Proin in est sed erat facilisis pharetra&period;
+          //- section
+          //-   h2 article section h2
+          //-   p
+          //-     | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period; Etiam ullamcorper lorem dapibus velit suscipit ultrices&period; Proin in est sed erat facilisis pharetra&period;
+          //- footer
+          //-   h3 article footer h3
+          //-   p
+          //-     | Lorem ipsum dolor sit amet&comma; consectetur adipiscing elit&period; Aliquam sodales urna non odio egestas tempor&period; Nunc vel vehicula ante&period; Etiam bibendum iaculis libero&comma; eget molestie nisl pharetra in&period; In semper consequat est&comma; eu porta velit mollis nec&period; Curabitur posuere enim eget turpis feugiat tempor&period;
         aside
           h3 aside
           p
