--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(data-main="scripts/main", src="scripts/require.js")
+    //- script(data-main="scripts/main", src="scripts/require.js")
   body
     block content
