--- a/views/index.jade
+++ b/views/index.jade
@@ -15,9 +15,9 @@ html.no-js
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width')
     link(href='http://fonts.googleapis.com/css?family=Noto+Sans|Cherry+Swash:700,', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', href='css/normalize.min.css')
-    link(rel='stylesheet', href='css/main.css')
-    script(src='js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
+    link(rel='stylesheet', href='/css/normalize.min.css')
+    link(rel='stylesheet', href='/css/main.css')
+    script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
     //- script(data-main='scripts/main', src='scripts/require.js')
   body
     //if lt IE 7
