Use basepath in links

--- a/views/hello/list.jade
+++ b/views/hello/list.jade
@@ -7,7 +7,7 @@ block content
     each hello, i in hellolist
       li
         span #{hello.greeting} #{hello.recipient} 
-          a(href="/hello/del/" + hello._id.toHexString()) del
+          a(href=basepath + "/hello/del/" + hello._id.toHexString()) del
           |
-          a(href="/hello/edit/" + hello._id.toHexString()) edit
-  a(href="/hello/new") new hello
+          a(href=basepath + "/hello/edit/" + hello._id.toHexString()) edit
+  a(href=basepath + "/hello/new") new hello
