--- a/views/hello/edit.jade
+++ b/views/hello/edit.jade
@@ -2,7 +2,7 @@ extends ../index
 
 block content
     h1= title
-    form#formAddHello(name="updatehello",method="post",action="/hello/update")
+    form#formAddHello(name="updatehello",method="post",action=basepath + "/hello/update")
         input(name="_id", type="hidden", value=hello._id.toHexString()) 
         input#inputHelloGreeting(type="text", value=hello.greeting, name="hellogreeting")
         input#inputHelloRecipient(type="text", value=hello.recipient, name="hellorecipient")
